OAS modules with namespace added to augment properties

--- a/OAS/tapi-connectivity@2020-06-16.yaml
+++ b/OAS/tapi-connectivity@2020-06-16.yaml
@@ -13110,7 +13110,7 @@ definitions:
   tapi.connectivity.ContextAugmentation3:
     type: "object"
     properties:
-      connectivity-context:
+      tapi-connectivity:connectivity-context:
         description: "Augments the base TAPI Context with ConnectivityService information"
         $ref: "#/definitions/tapi.connectivity.ConnectivityContext"
     x-augmentation:
@@ -13150,7 +13150,7 @@ definitions:
   tapi.connectivity.OwnedNodeEdgePointAugmentation1:
     type: "object"
     properties:
-      cep-list:
+      tapi-connectivity:cep-list:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.CepList"
     x-augmentation:
@@ -13554,7 +13554,7 @@ definitions:
   tapi.notification.ContextAugmentation1:
     type: "object"
     properties:
-      notification-context:
+      tapi-notification:notification-context:
         description: "Augments the base TAPI Context with NotificationService information"
         $ref: "#/definitions/tapi.notification.NotificationContext"
     x-augmentation:
@@ -13987,7 +13987,7 @@ definitions:
   tapi.path.computation.ContextAugmentation2:
     type: "object"
     properties:
-      path-computation-context:
+      tapi-path-computation:path-computation-context:
         description: "Augments the base TAPI Context with PathComputationService information"
         $ref: "#/definitions/tapi.path.computation.PathComputationContext"
     x-augmentation:
@@ -14379,7 +14379,7 @@ definitions:
   tapi.topology.ContextAugmentation4:
     type: "object"
     properties:
-      topology-context:
+      tapi-topology:topology-context:
         description: "Augments the base TAPI Context with TopologyService information"
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
