--- a/OAS/tapi-dsr@2020-04-23.yaml
+++ b/OAS/tapi-dsr@2020-04-23.yaml
@@ -16125,7 +16125,7 @@ definitions:
   tapi.connectivity.ContextAugmentation4:
     type: "object"
     properties:
-      connectivity-context:
+      tapi-connectivity:connectivity-context:
         description: "Augments the base TAPI Context with ConnectivityService information"
         $ref: "#/definitions/tapi.connectivity.ConnectivityContext"
     x-augmentation:
@@ -16165,7 +16165,7 @@ definitions:
   tapi.connectivity.OwnedNodeEdgePointAugmentation1:
     type: "object"
     properties:
-      cep-list:
+      tapi-connectivity:cep-list:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.context.topologycontext.topology.node.ownednodeedgepoint.CepList"
     x-augmentation:
@@ -16591,7 +16591,7 @@ definitions:
   tapi.notification.ContextAugmentation2:
     type: "object"
     properties:
-      notification-context:
+      tapi-notification:notification-context:
         description: "Augments the base TAPI Context with NotificationService information"
         $ref: "#/definitions/tapi.notification.NotificationContext"
     x-augmentation:
@@ -17019,7 +17019,7 @@ definitions:
   tapi.oam.ConnectionEndPointAugmentation1:
     type: "object"
     properties:
-      mep-mip-list:
+      tapi-oam:mep-mip-list:
         description: "none"
         $ref: "#/definitions/tapi.oam.MepMipList"
     x-augmentation:
@@ -17028,7 +17028,7 @@ definitions:
   tapi.oam.ContextAugmentation1:
     type: "object"
     properties:
-      oam-context:
+      tapi-oam:oam-context:
         description: "Augments the base TAPI Context with OamService information"
         $ref: "#/definitions/tapi.oam.OamContext"
     x-augmentation:
@@ -17740,7 +17740,7 @@ definitions:
   tapi.path.computation.ContextAugmentation3:
     type: "object"
     properties:
-      path-computation-context:
+      tapi-path-computation:path-computation-context:
         description: "Augments the base TAPI Context with PathComputationService information"
         $ref: "#/definitions/tapi.path.computation.PathComputationContext"
     x-augmentation:
@@ -18132,7 +18132,7 @@ definitions:
   tapi.topology.ContextAugmentation5:
     type: "object"
     properties:
-      topology-context:
+      tapi-topology:topology-context:
         description: "Augments the base TAPI Context with TopologyService information"
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
