--- a/OAS/tapi-equipment@2020-04-23.yaml
+++ b/OAS/tapi-equipment@2020-04-23.yaml
@@ -7391,7 +7391,7 @@ definitions:
   tapi.equipment.ContextAugmentation2:
     type: "object"
     properties:
-      physical-context:
+      tapi-equipment:physical-context:
         description: "none"
         $ref: "#/definitions/tapi.equipment.PhysicalContext"
     x-augmentation:
@@ -7567,7 +7567,7 @@ definitions:
   tapi.equipment.NodeAugmentation1:
     type: "object"
     properties:
-      supporting-physical-span:
+      tapi-equipment:supporting-physical-span:
         description: "none"
         $ref: "#/definitions/tapi.equipment.SupportingPhysicalSpan"
     x-augmentation:
@@ -7576,7 +7576,7 @@ definitions:
   tapi.equipment.OwnedNodeEdgePointAugmentation1:
     type: "object"
     properties:
-      supporting-access-port:
+      tapi-equipment:supporting-access-port:
         description: "none"
         $ref: "#/definitions/tapi.equipment.SupportingAccessPort"
     x-augmentation:
@@ -7764,7 +7764,7 @@ definitions:
   tapi.notification.ContextAugmentation1:
     type: "object"
     properties:
-      notification-context:
+      tapi-notification:notification-context:
         description: "Augments the base TAPI Context with NotificationService information"
         $ref: "#/definitions/tapi.notification.NotificationContext"
     x-augmentation:
@@ -8209,7 +8209,7 @@ definitions:
   tapi.topology.ContextAugmentation3:
     type: "object"
     properties:
-      topology-context:
+      tapi-topology:topology-context:
         description: "Augments the base TAPI Context with TopologyService information"
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
