--- a/OAS/tapi-eth@2020-04-23.yaml
+++ b/OAS/tapi-eth@2020-04-23.yaml
@@ -21269,7 +21269,7 @@ definitions:
   tapi.connectivity.ContextAugmentation4:
     type: "object"
     properties:
-      connectivity-context:
+      tapi-connectivity:connectivity-context:
         description: "Augments the base TAPI Context with ConnectivityService information"
         $ref: "#/definitions/tapi.connectivity.ConnectivityContext"
     x-augmentation:
@@ -21309,7 +21309,7 @@ definitions:
   tapi.connectivity.OwnedNodeEdgePointAugmentation1:
     type: "object"
     properties:
-      cep-list:
+      tapi-connectivity:cep-list:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.context.topologycontext.topology.node.ownednodeedgepoint.CepList"
     x-augmentation:
@@ -21743,7 +21743,7 @@ definitions:
   tapi.eth.ConnectionEndPointAugmentation2:
     type: "object"
     properties:
-      eth-connection-end-point-spec:
+      tapi-eth:eth-connection-end-point-spec:
         description: "Augments the base LayerProtocol information in ConnectionEndPoint\
           \ with ETH-specific information"
         $ref: "#/definitions/tapi.eth.EthConnectionEndPointSpec"
@@ -22963,7 +22963,7 @@ definitions:
   tapi.eth.MegAugmentation1:
     type: "object"
     properties:
-      eth-meg-spec:
+      tapi-eth:eth-meg-spec:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthMegSpec"
     x-augmentation:
@@ -22972,7 +22972,7 @@ definitions:
   tapi.eth.MepAugmentation1:
     type: "object"
     properties:
-      eth-mep-spec:
+      tapi-eth:eth-mep-spec:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthMepSpec"
     x-augmentation:
@@ -22989,7 +22989,7 @@ definitions:
   tapi.eth.MipAugmentation1:
     type: "object"
     properties:
-      eth-mip-spec:
+      tapi-eth:eth-mip-spec:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthMipSpec"
     x-augmentation:
@@ -22998,7 +22998,7 @@ definitions:
   tapi.eth.OamJobAugmentation1:
     type: "object"
     properties:
-      eth-link-trace-job:
+      tapi-eth:eth-link-trace-job:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthLinkTraceJob"
     x-augmentation:
@@ -23007,7 +23007,7 @@ definitions:
   tapi.eth.OamJobAugmentation2:
     type: "object"
     properties:
-      eth-on-demand-2way-measurement-job:
+      tapi-eth:eth-on-demand-2way-measurement-job:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthOnDemand2wayMeasurementJob"
     x-augmentation:
@@ -23016,7 +23016,7 @@ definitions:
   tapi.eth.OamJobAugmentation3:
     type: "object"
     properties:
-      eth-pro-active-1way-measurement-job:
+      tapi-eth:eth-pro-active-1way-measurement-job:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthProActive1wayMeasurementJob"
     x-augmentation:
@@ -23025,7 +23025,7 @@ definitions:
   tapi.eth.OamJobAugmentation4:
     type: "object"
     properties:
-      eth-pro-active-2way-measurement-job:
+      tapi-eth:eth-pro-active-2way-measurement-job:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthProActive2wayMeasurementJob"
     x-augmentation:
@@ -23034,7 +23034,7 @@ definitions:
   tapi.eth.OamJobAugmentation5:
     type: "object"
     properties:
-      eth-test-job:
+      tapi-eth:eth-test-job:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthTestJob"
     x-augmentation:
@@ -23043,7 +23043,7 @@ definitions:
   tapi.eth.OamJobAugmentation6:
     type: "object"
     properties:
-      eth-loopback-job:
+      tapi-eth:eth-loopback-job:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthLoopbackJob"
     x-augmentation:
@@ -23052,7 +23052,7 @@ definitions:
   tapi.eth.OamJobAugmentation7:
     type: "object"
     properties:
-      eth-on-demand-1way-measurement-job:
+      tapi-eth:eth-on-demand-1way-measurement-job:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthOnDemand1wayMeasurementJob"
     x-augmentation:
@@ -23135,7 +23135,7 @@ definitions:
   tapi.eth.PmCurrentDataAugmentation1:
     type: "object"
     properties:
-      eth-pro-active-lm-performance-data:
+      tapi-eth:eth-pro-active-lm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthProActiveLmPerformanceData"
     x-augmentation:
@@ -23144,7 +23144,7 @@ definitions:
   tapi.eth.PmCurrentDataAugmentation10:
     type: "object"
     properties:
-      eth-pro-active-1-dm-performance-data:
+      tapi-eth:eth-pro-active-1-dm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthProActive1DmPerformanceData"
     x-augmentation:
@@ -23153,7 +23153,7 @@ definitions:
   tapi.eth.PmCurrentDataAugmentation11:
     type: "object"
     properties:
-      eth-test-result-data:
+      tapi-eth:eth-test-result-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthTestResultData"
     x-augmentation:
@@ -23162,7 +23162,7 @@ definitions:
   tapi.eth.PmCurrentDataAugmentation2:
     type: "object"
     properties:
-      eth-on-demand-1-dm-performance-data:
+      tapi-eth:eth-on-demand-1-dm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthOnDemand1DmPerformanceData"
     x-augmentation:
@@ -23171,7 +23171,7 @@ definitions:
   tapi.eth.PmCurrentDataAugmentation3:
     type: "object"
     properties:
-      eth-pro-active-dm-performance-data:
+      tapi-eth:eth-pro-active-dm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthProActiveDmPerformanceData"
     x-augmentation:
@@ -23180,7 +23180,7 @@ definitions:
   tapi.eth.PmCurrentDataAugmentation4:
     type: "object"
     properties:
-      eth-link-trace-result-data:
+      tapi-eth:eth-link-trace-result-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthLinkTraceResultData"
     x-augmentation:
@@ -23189,7 +23189,7 @@ definitions:
   tapi.eth.PmCurrentDataAugmentation5:
     type: "object"
     properties:
-      eth-on-demand-lm-performance-data:
+      tapi-eth:eth-on-demand-lm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthOnDemandLmPerformanceData"
     x-augmentation:
@@ -23198,7 +23198,7 @@ definitions:
   tapi.eth.PmCurrentDataAugmentation6:
     type: "object"
     properties:
-      eth-pro-active-1-lm-performance-data:
+      tapi-eth:eth-pro-active-1-lm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthProActive1LmPerformanceData"
     x-augmentation:
@@ -23207,7 +23207,7 @@ definitions:
   tapi.eth.PmCurrentDataAugmentation7:
     type: "object"
     properties:
-      eth-on-demand-1-lm-performance-data:
+      tapi-eth:eth-on-demand-1-lm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthOnDemand1LmPerformanceData"
     x-augmentation:
@@ -23216,7 +23216,7 @@ definitions:
   tapi.eth.PmCurrentDataAugmentation8:
     type: "object"
     properties:
-      eth-loopback-result-data:
+      tapi-eth:eth-loopback-result-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthLoopbackResultData"
     x-augmentation:
@@ -23225,7 +23225,7 @@ definitions:
   tapi.eth.PmCurrentDataAugmentation9:
     type: "object"
     properties:
-      eth-on-demand-dm-performance-data:
+      tapi-eth:eth-on-demand-dm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthOnDemandDmPerformanceData"
     x-augmentation:
@@ -23234,7 +23234,7 @@ definitions:
   tapi.eth.PmHistoryDataAugmentation1:
     type: "object"
     properties:
-      eth-pro-active-dm-performance-data:
+      tapi-eth:eth-pro-active-dm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthProActiveDmPerformanceData"
     x-augmentation:
@@ -23243,7 +23243,7 @@ definitions:
   tapi.eth.PmHistoryDataAugmentation2:
     type: "object"
     properties:
-      eth-on-demand-dm-performance-data:
+      tapi-eth:eth-on-demand-dm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthOnDemandDmPerformanceData"
     x-augmentation:
@@ -23252,7 +23252,7 @@ definitions:
   tapi.eth.PmHistoryDataAugmentation3:
     type: "object"
     properties:
-      eth-pro-active-1-lm-performance-data:
+      tapi-eth:eth-pro-active-1-lm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthProActive1LmPerformanceData"
     x-augmentation:
@@ -23261,7 +23261,7 @@ definitions:
   tapi.eth.PmHistoryDataAugmentation4:
     type: "object"
     properties:
-      eth-on-demand-1-dm-performance-data:
+      tapi-eth:eth-on-demand-1-dm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthOnDemand1DmPerformanceData"
     x-augmentation:
@@ -23270,7 +23270,7 @@ definitions:
   tapi.eth.PmHistoryDataAugmentation5:
     type: "object"
     properties:
-      eth-on-demand-1-lm-performance-data:
+      tapi-eth:eth-on-demand-1-lm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthOnDemand1LmPerformanceData"
     x-augmentation:
@@ -23279,7 +23279,7 @@ definitions:
   tapi.eth.PmHistoryDataAugmentation6:
     type: "object"
     properties:
-      eth-pro-active-lm-performance-data:
+      tapi-eth:eth-pro-active-lm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthProActiveLmPerformanceData"
     x-augmentation:
@@ -23288,7 +23288,7 @@ definitions:
   tapi.eth.PmHistoryDataAugmentation7:
     type: "object"
     properties:
-      eth-on-demand-lm-performance-data:
+      tapi-eth:eth-on-demand-lm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthOnDemandLmPerformanceData"
     x-augmentation:
@@ -23297,7 +23297,7 @@ definitions:
   tapi.eth.PmHistoryDataAugmentation8:
     type: "object"
     properties:
-      eth-pro-active-1-dm-performance-data:
+      tapi-eth:eth-pro-active-1-dm-performance-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthProActive1DmPerformanceData"
     x-augmentation:
@@ -23306,7 +23306,7 @@ definitions:
   tapi.eth.PmThresholdDataAugmentation1:
     type: "object"
     properties:
-      eth-lm-threshold-data:
+      tapi-eth:eth-lm-threshold-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthLmThresholdData"
     x-augmentation:
@@ -23315,7 +23315,7 @@ definitions:
   tapi.eth.PmThresholdDataAugmentation2:
     type: "object"
     properties:
-      eth-dm-threshold-data:
+      tapi-eth:eth-dm-threshold-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.EthDmThresholdData"
     x-augmentation:
@@ -23324,7 +23324,7 @@ definitions:
   tapi.eth.PmThresholdDataAugmentation3:
     type: "object"
     properties:
-      eth-1-dm-threshold-data:
+      tapi-eth:eth-1-dm-threshold-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.Eth1DmThresholdData"
     x-augmentation:
@@ -23333,7 +23333,7 @@ definitions:
   tapi.eth.PmThresholdDataAugmentation4:
     type: "object"
     properties:
-      eth-1-lm-threshold-data:
+      tapi-eth:eth-1-lm-threshold-data:
         description: "none"
         $ref: "#/definitions/tapi.eth.Eth1LmThresholdData"
     x-augmentation:
@@ -23648,7 +23648,7 @@ definitions:
   tapi.notification.ContextAugmentation1:
     type: "object"
     properties:
-      notification-context:
+      tapi-notification:notification-context:
         description: "Augments the base TAPI Context with NotificationService information"
         $ref: "#/definitions/tapi.notification.NotificationContext"
     x-augmentation:
@@ -24076,7 +24076,7 @@ definitions:
   tapi.oam.ConnectionEndPointAugmentation1:
     type: "object"
     properties:
-      mep-mip-list:
+      tapi-oam:mep-mip-list:
         description: "none"
         $ref: "#/definitions/tapi.oam.MepMipList"
     x-augmentation:
@@ -24085,7 +24085,7 @@ definitions:
   tapi.oam.ContextAugmentation2:
     type: "object"
     properties:
-      oam-context:
+      tapi-oam:oam-context:
         description: "Augments the base TAPI Context with OamService information"
         $ref: "#/definitions/tapi.oam.context.OamContext"
     x-augmentation:
@@ -24969,7 +24969,7 @@ definitions:
   tapi.path.computation.ContextAugmentation3:
     type: "object"
     properties:
-      path-computation-context:
+      tapi-path-computation:path-computation-context:
         description: "Augments the base TAPI Context with PathComputationService information"
         $ref: "#/definitions/tapi.path.computation.PathComputationContext"
     x-augmentation:
@@ -25361,7 +25361,7 @@ definitions:
   tapi.topology.ContextAugmentation5:
     type: "object"
     properties:
-      topology-context:
+      tapi-topology:topology-context:
         description: "Augments the base TAPI Context with TopologyService information"
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
