--- a/OAS/tapi-notification@2020-06-16.yaml
+++ b/OAS/tapi-notification@2020-06-16.yaml
@@ -1969,7 +1969,7 @@ definitions:
   tapi.notification.ContextAugmentation1:
     type: "object"
     properties:
-      notification-context:
+      tapi-notification:notification-context:
         description: "Augments the base TAPI Context with NotificationService information"
         $ref: "#/definitions/tapi.notification.NotificationContext"
     x-augmentation:
