--- a/OAS/tapi-oam@2020-04-23.yaml
+++ b/OAS/tapi-oam@2020-04-23.yaml
@@ -16108,7 +16108,7 @@ definitions:
   tapi.connectivity.ContextAugmentation4:
     type: "object"
     properties:
-      connectivity-context:
+      tapi-connectivity:connectivity-context:
         description: "Augments the base TAPI Context with ConnectivityService information"
         $ref: "#/definitions/tapi.connectivity.ConnectivityContext"
     x-augmentation:
@@ -16148,7 +16148,7 @@ definitions:
   tapi.connectivity.OwnedNodeEdgePointAugmentation1:
     type: "object"
     properties:
-      cep-list:
+      tapi-connectivity:cep-list:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.context.topologycontext.topology.node.ownednodeedgepoint.CepList"
     x-augmentation:
@@ -16574,7 +16574,7 @@ definitions:
   tapi.notification.ContextAugmentation1:
     type: "object"
     properties:
-      notification-context:
+      tapi-notification:notification-context:
         description: "Augments the base TAPI Context with NotificationService information"
         $ref: "#/definitions/tapi.notification.NotificationContext"
     x-augmentation:
@@ -17002,7 +17002,7 @@ definitions:
   tapi.oam.ConnectionEndPointAugmentation1:
     type: "object"
     properties:
-      mep-mip-list:
+      tapi-oam:mep-mip-list:
         description: "none"
         $ref: "#/definitions/tapi.oam.MepMipList"
     x-augmentation:
@@ -17011,7 +17011,7 @@ definitions:
   tapi.oam.ContextAugmentation2:
     type: "object"
     properties:
-      oam-context:
+      tapi-oam:oam-context:
         description: "Augments the base TAPI Context with OamService information"
         $ref: "#/definitions/tapi.oam.OamContext"
     x-augmentation:
@@ -17723,7 +17723,7 @@ definitions:
   tapi.path.computation.ContextAugmentation3:
     type: "object"
     properties:
-      path-computation-context:
+      tapi-path-computation:path-computation-context:
         description: "Augments the base TAPI Context with PathComputationService information"
         $ref: "#/definitions/tapi.path.computation.PathComputationContext"
     x-augmentation:
@@ -18115,7 +18115,7 @@ definitions:
   tapi.topology.ContextAugmentation5:
     type: "object"
     properties:
-      topology-context:
+      tapi-topology:topology-context:
         description: "Augments the base TAPI Context with TopologyService information"
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
