--- a/OAS/tapi-photonic-media@2020-06-16.yaml
+++ b/OAS/tapi-photonic-media@2020-06-16.yaml
@@ -24352,7 +24352,7 @@ definitions:
   tapi.connectivity.ContextAugmentation4:
     type: "object"
     properties:
-      connectivity-context:
+      tapi-connectivity:connectivity-context:
         description: "Augments the base TAPI Context with ConnectivityService information"
         $ref: "#/definitions/tapi.connectivity.ConnectivityContext"
     x-augmentation:
@@ -24392,7 +24392,7 @@ definitions:
   tapi.connectivity.OwnedNodeEdgePointAugmentation2:
     type: "object"
     properties:
-      cep-list:
+      tapi-connectivity:cep-list:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.context.topologycontext.topology.node.ownednodeedgepoint.CepList"
     x-augmentation:
@@ -24956,7 +24956,7 @@ definitions:
   tapi.notification.ContextAugmentation2:
     type: "object"
     properties:
-      notification-context:
+      tapi-notification:notification-context:
         description: "Augments the base TAPI Context with NotificationService information"
         $ref: "#/definitions/tapi.notification.NotificationContext"
     x-augmentation:
@@ -25384,7 +25384,7 @@ definitions:
   tapi.oam.ConnectionEndPointAugmentation6:
     type: "object"
     properties:
-      mep-mip-list:
+      tapi-oam:mep-mip-list:
         description: "none"
         $ref: "#/definitions/tapi.oam.MepMipList"
     x-augmentation:
@@ -25393,7 +25393,7 @@ definitions:
   tapi.oam.ContextAugmentation1:
     type: "object"
     properties:
-      oam-context:
+      tapi-oam:oam-context:
         description: "Augments the base TAPI Context with OamService information"
         $ref: "#/definitions/tapi.oam.OamContext"
     x-augmentation:
@@ -26141,7 +26141,7 @@ definitions:
   tapi.odu.ConnectionEndPointAugmentation7:
     type: "object"
     properties:
-      odu-connection-end-point-spec:
+      tapi-odu:odu-connection-end-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.odu.OduConnectionEndPointSpec"
     x-augmentation:
@@ -26172,7 +26172,7 @@ definitions:
   tapi.odu.EndPointAugmentation5:
     type: "object"
     properties:
-      odu-connectivity-service-end-point-spec:
+      tapi-odu:odu-connectivity-service-end-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.odu.OduConnectivityServiceEndPointSpec"
     x-augmentation:
@@ -26221,7 +26221,7 @@ definitions:
   tapi.odu.MepAugmentation1:
     type: "object"
     properties:
-      odu-connection-end-point-spec:
+      tapi-odu:odu-connection-end-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.odu.OduConnectionEndPointSpec"
     x-augmentation:
@@ -26230,7 +26230,7 @@ definitions:
   tapi.odu.MipAugmentation1:
     type: "object"
     properties:
-      odu-mip-spec:
+      tapi-odu:odu-mip-spec:
         description: "none"
         $ref: "#/definitions/tapi.odu.OduMipSpec"
     x-augmentation:
@@ -26778,7 +26778,7 @@ definitions:
   tapi.odu.OwnedNodeEdgePointAugmentation1:
     type: "object"
     properties:
-      odu-node-edge-point-spec:
+      tapi-odu:odu-node-edge-point-spec:
         description: "Augments the base LayerProtocol information in NodeEdgePoint\
           \ with ODU-specific information"
         $ref: "#/definitions/tapi.odu.OduNodeEdgePointSpec"
@@ -26830,7 +26830,7 @@ definitions:
   tapi.path.computation.ContextAugmentation3:
     type: "object"
     properties:
-      path-computation-context:
+      tapi-path-computation:path-computation-context:
         description: "Augments the base TAPI Context with PathComputationService information"
         $ref: "#/definitions/tapi.path.computation.PathComputationContext"
     x-augmentation:
@@ -27275,7 +27275,7 @@ definitions:
   tapi.photonic.media.ConnectionEndPointAugmentation1:
     type: "object"
     properties:
-      otsi-connection-end-point-spec:
+      tapi-photonic-media:otsi-connection-end-point-spec:
         description: "Augments the base LayerProtocol information in ConnectionEndPoint\
           \ with OCH-specific information"
         $ref: "#/definitions/tapi.photonic.media.OtsiConnectionEndPointSpec"
@@ -27285,7 +27285,7 @@ definitions:
   tapi.photonic.media.ConnectionEndPointAugmentation2:
     type: "object"
     properties:
-      media-channel-assembly-spec:
+      tapi-photonic-media:media-channel-assembly-spec:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.MediaChannelAssemblySpec"
     x-augmentation:
@@ -27294,7 +27294,7 @@ definitions:
   tapi.photonic.media.ConnectionEndPointAugmentation3:
     type: "object"
     properties:
-      media-channel-connection-end-point-spec:
+      tapi-photonic-media:media-channel-connection-end-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.MediaChannelConnectionEndPointSpec"
     x-augmentation:
@@ -27303,7 +27303,7 @@ definitions:
   tapi.photonic.media.ConnectionEndPointAugmentation4:
     type: "object"
     properties:
-      otsi-assembly-connection-end-point-spec:
+      tapi-photonic-media:otsi-assembly-connection-end-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.OtsiAssemblyConnectionEndPointSpec"
     x-augmentation:
@@ -27312,7 +27312,7 @@ definitions:
   tapi.photonic.media.ConnectionEndPointAugmentation5:
     type: "object"
     properties:
-      ots-connection-end-point-spec:
+      tapi-photonic-media:ots-connection-end-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.OtsConnectionEndPointSpec"
     x-augmentation:
@@ -27321,7 +27321,7 @@ definitions:
   tapi.photonic.media.EndPointAugmentation1:
     type: "object"
     properties:
-      otsia-connectivity-service-end-point-spec:
+      tapi-photonic-media:otsia-connectivity-service-end-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.OtsiaConnectivityServiceEndPointSpec"
     x-augmentation:
@@ -27330,7 +27330,7 @@ definitions:
   tapi.photonic.media.EndPointAugmentation2:
     type: "object"
     properties:
-      otsi-connectivity-service-end-point-spec:
+      tapi-photonic-media:otsi-connectivity-service-end-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.OtsiConnectivityServiceEndPointSpec"
     x-augmentation:
@@ -27339,7 +27339,7 @@ definitions:
   tapi.photonic.media.EndPointAugmentation3:
     type: "object"
     properties:
-      media-channel-connectivity-service-end-point-spec:
+      tapi-photonic-media:media-channel-connectivity-service-end-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.MediaChannelConnectivityServiceEndPointSpec"
     x-augmentation:
@@ -27348,7 +27348,7 @@ definitions:
   tapi.photonic.media.EndPointAugmentation4:
     type: "object"
     properties:
-      mca-connectivity-service-end-point-spec:
+      tapi-photonic-media:mca-connectivity-service-end-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.McaConnectivityServiceEndPointSpec"
     x-augmentation:
@@ -27593,7 +27593,7 @@ definitions:
   tapi.photonic.media.NodeEdgePointAugmentation1:
     type: "object"
     properties:
-      media-channel-node-edge-point-spec:
+      tapi-photonic-media:media-channel-node-edge-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.MediaChannelNodeEdgePointSpec"
     x-augmentation:
@@ -27802,7 +27802,7 @@ definitions:
   tapi.photonic.media.OwnedNodeEdgePointAugmentation3:
     type: "object"
     properties:
-      media-channel-node-edge-point-spec:
+      tapi-photonic-media:media-channel-node-edge-point-spec:
         description: "Augments the base LayerProtocol information in NodeEdgePoint\
           \ with OCH-specific information"
         $ref: "#/definitions/tapi.photonic.media.MediaChannelNodeEdgePointSpec"
@@ -27907,7 +27907,7 @@ definitions:
   tapi.photonic.media.ServiceInterfacePointAugmentation1:
     type: "object"
     properties:
-      otsi-service-interface-point-spec:
+      tapi-photonic-media:otsi-service-interface-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.OtsiServiceInterfacePointSpec"
     x-augmentation:
@@ -27916,7 +27916,7 @@ definitions:
   tapi.photonic.media.ServiceInterfacePointAugmentation2:
     type: "object"
     properties:
-      media-channel-service-interface-point-spec:
+      tapi-photonic-media:media-channel-service-interface-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.MediaChannelServiceInterfacePointSpec"
     x-augmentation:
@@ -27925,7 +27925,7 @@ definitions:
   tapi.photonic.media.SipAugmentation1:
     type: "object"
     properties:
-      otsi-service-interface-point-spec:
+      tapi-photonic-media:otsi-service-interface-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.OtsiServiceInterfacePointSpec"
     x-augmentation:
@@ -27934,7 +27934,7 @@ definitions:
   tapi.photonic.media.SipAugmentation2:
     type: "object"
     properties:
-      media-channel-service-interface-point-spec:
+      tapi-photonic-media:media-channel-service-interface-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.photonic.media.MediaChannelServiceInterfacePointSpec"
     x-augmentation:
@@ -28005,7 +28005,7 @@ definitions:
   tapi.topology.ContextAugmentation5:
     type: "object"
     properties:
-      topology-context:
+      tapi-topology:topology-context:
         description: "Augments the base TAPI Context with TopologyService information"
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
