--- a/OAS/tapi-topology@2020-04-23.yaml
+++ b/OAS/tapi-topology@2020-04-23.yaml
@@ -5766,7 +5766,7 @@ definitions:
   tapi.notification.ContextAugmentation1:
     type: "object"
     properties:
-      notification-context:
+      tapi-notification:notification-context:
         description: "Augments the base TAPI Context with NotificationService information"
         $ref: "#/definitions/tapi.notification.NotificationContext"
     x-augmentation:
@@ -6211,7 +6211,7 @@ definitions:
   tapi.topology.ContextAugmentation2:
     type: "object"
     properties:
-      topology-context:
+      tapi-topology:topology-context:
         description: "Augments the base TAPI Context with TopologyService information"
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
