--- a/OAS/tapi-virtual-network@2020-06-16.yaml
+++ b/OAS/tapi-virtual-network@2020-06-16.yaml
@@ -7846,7 +7846,7 @@ definitions:
   tapi.notification.ContextAugmentation1:
     type: "object"
     properties:
-      notification-context:
+      tapi-notification:notification-context:
         description: "Augments the base TAPI Context with NotificationService information"
         $ref: "#/definitions/tapi.notification.NotificationContext"
     x-augmentation:
@@ -8291,7 +8291,7 @@ definitions:
   tapi.topology.ContextAugmentation3:
     type: "object"
     properties:
-      topology-context:
+      tapi-topology:topology-context:
         description: "Augments the base TAPI Context with TopologyService information"
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
@@ -9057,7 +9057,7 @@ definitions:
   tapi.virtual.network.ContextAugmentation2:
     type: "object"
     properties:
-      virtual-network-context:
+      tapi-virtual-network:virtual-network-context:
         description: "Augments the base TAPI Context with VirtualNetworkService information"
         $ref: "#/definitions/tapi.virtual.network.VirtualNetworkContext"
     x-augmentation:
