--- a/OAS/tapi-odu@2020-04-23.yaml
+++ b/OAS/tapi-odu@2020-04-23.yaml
@@ -17222,7 +17222,7 @@ definitions:
   tapi.connectivity.ContextAugmentation4:
     type: "object"
     properties:
-      connectivity-context:
+      tapi-connectivity:connectivity-context:
         description: "Augments the base TAPI Context with ConnectivityService information"
         $ref: "#/definitions/tapi.connectivity.ConnectivityContext"
     x-augmentation:
@@ -17262,7 +17262,7 @@ definitions:
   tapi.connectivity.OwnedNodeEdgePointAugmentation2:
     type: "object"
     properties:
-      cep-list:
+      tapi-connectivity:cep-list:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.context.topologycontext.topology.node.ownednodeedgepoint.CepList"
     x-augmentation:
@@ -17722,7 +17722,7 @@ definitions:
   tapi.notification.ContextAugmentation2:
     type: "object"
     properties:
-      notification-context:
+      tapi-notification:notification-context:
         description: "Augments the base TAPI Context with NotificationService information"
         $ref: "#/definitions/tapi.notification.NotificationContext"
     x-augmentation:
@@ -18150,7 +18150,7 @@ definitions:
   tapi.oam.ConnectionEndPointAugmentation1:
     type: "object"
     properties:
-      mep-mip-list:
+      tapi-oam:mep-mip-list:
         description: "none"
         $ref: "#/definitions/tapi.oam.MepMipList"
     x-augmentation:
@@ -18159,7 +18159,7 @@ definitions:
   tapi.oam.ContextAugmentation1:
     type: "object"
     properties:
-      oam-context:
+      tapi-oam:oam-context:
         description: "Augments the base TAPI Context with OamService information"
         $ref: "#/definitions/tapi.oam.OamContext"
     x-augmentation:
@@ -18907,7 +18907,7 @@ definitions:
   tapi.odu.ConnectionEndPointAugmentation2:
     type: "object"
     properties:
-      odu-connection-end-point-spec:
+      tapi-odu:odu-connection-end-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.odu.OduConnectionEndPointSpec"
     x-augmentation:
@@ -18938,7 +18938,7 @@ definitions:
   tapi.odu.EndPointAugmentation1:
     type: "object"
     properties:
-      odu-connectivity-service-end-point-spec:
+      tapi-odu:odu-connectivity-service-end-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.odu.OduConnectivityServiceEndPointSpec"
     x-augmentation:
@@ -18987,7 +18987,7 @@ definitions:
   tapi.odu.MepAugmentation1:
     type: "object"
     properties:
-      odu-connection-end-point-spec:
+      tapi-odu:odu-connection-end-point-spec:
         description: "none"
         $ref: "#/definitions/tapi.odu.OduConnectionEndPointSpec"
     x-augmentation:
@@ -18996,7 +18996,7 @@ definitions:
   tapi.odu.MipAugmentation1:
     type: "object"
     properties:
-      odu-mip-spec:
+      tapi-odu:odu-mip-spec:
         description: "none"
         $ref: "#/definitions/tapi.odu.OduMipSpec"
     x-augmentation:
@@ -19544,7 +19544,7 @@ definitions:
   tapi.odu.OwnedNodeEdgePointAugmentation1:
     type: "object"
     properties:
-      odu-node-edge-point-spec:
+      tapi-odu:odu-node-edge-point-spec:
         description: "Augments the base LayerProtocol information in NodeEdgePoint\
           \ with ODU-specific information"
         $ref: "#/definitions/tapi.odu.OduNodeEdgePointSpec"
@@ -19596,7 +19596,7 @@ definitions:
   tapi.path.computation.ContextAugmentation3:
     type: "object"
     properties:
-      path-computation-context:
+      tapi-path-computation:path-computation-context:
         description: "Augments the base TAPI Context with PathComputationService information"
         $ref: "#/definitions/tapi.path.computation.PathComputationContext"
     x-augmentation:
@@ -19988,7 +19988,7 @@ definitions:
   tapi.topology.ContextAugmentation5:
     type: "object"
     properties:
-      topology-context:
+      tapi-topology:topology-context:
         description: "Augments the base TAPI Context with TopologyService information"
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
