--- a/OAS/tapi-path-computation@2020-04-23.yaml
+++ b/OAS/tapi-path-computation@2020-04-23.yaml
@@ -8518,7 +8518,7 @@ definitions:
   tapi.notification.ContextAugmentation1:
     type: "object"
     properties:
-      notification-context:
+      tapi-notification:notification-context:
         description: "Augments the base TAPI Context with NotificationService information"
         $ref: "#/definitions/tapi.notification.NotificationContext"
     x-augmentation:
@@ -8951,7 +8951,7 @@ definitions:
   tapi.path.computation.ContextAugmentation2:
     type: "object"
     properties:
-      path-computation-context:
+      tapi-path-computation:path-computation-context:
         description: "Augments the base TAPI Context with PathComputationService information"
         $ref: "#/definitions/tapi.path.computation.PathComputationContext"
     x-augmentation:
@@ -9343,7 +9343,7 @@ definitions:
   tapi.topology.ContextAugmentation3:
     type: "object"
     properties:
-      topology-context:
+      tapi-topology:topology-context:
         description: "Augments the base TAPI Context with TopologyService information"
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
